--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="College_Organizer.Landing"
+    x:Class="College_Organizer.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:College_Organizer"
@@ -7,27 +7,24 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
     <Grid Background="{ThemeResource SystemControlAcrylicWindowBrush}">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="3*" />
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="3*"/>
         </Grid.ColumnDefinitions>
-        <NavigationView x:Name="landingNaviView" RightTapped="landingNaviView_RightTapped" IsRightTapEnabled="True" SelectionChanged="landingNaviView_SelectionChanged" ItemInvoked="landingNaviView_ItemInvoked" Grid.Column="0" ExpandedModeThresholdWidth="100" IsSettingsVisible="False" IsBackButtonVisible="Collapsed">
+        <NavigationView x:Name="NaviView" ExpandedModeThresholdWidth="100" Grid.Column="0" IsSettingsVisible="False" FontSize="16" FontFamily="Segoe UI Light" ItemInvoked="NaviView_ItemInvoked" Loaded="NaviView_Loaded" IsBackButtonVisible="Collapsed">
             <NavigationView.MenuItems>
-                <NavigationViewItemHeader Content="Courses"></NavigationViewItemHeader>
-                <NavigationViewItem x:Name="signOut" Tag="Sign Out" Content="Sign Out" />
-                <NavigationViewItem x:Name="firstItem" Tag="default" Content="Add New Course"/>
+                <NavigationViewItem x:Name="Login" Tag="login" Content="Login" />
+                <NavigationViewItem x:Name="signup" Tag="signup" Content="Sign Up" />
             </NavigationView.MenuItems>
         </NavigationView>
-        
-        <Frame x:Name="lContentFrame" Grid.Column="1">
+
+        <Frame x:Name="ContentFrame" Grid.Column="1">
             <Frame.ContentTransitions>
                 <TransitionCollection>
                     <NavigationThemeTransition/>
                 </TransitionCollection>
             </Frame.ContentTransitions>
-            <Grid x:Name="landingGrid"></Grid>
         </Frame>
     </Grid>
 </Page>
